Fix issue with tap effect on iOS

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -20,6 +20,7 @@ a {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
   font-family: work-sans, sans-serif;
+  -webkit-tap-highlight-color: transparent;
 }
 
 input,
